# static-site-cdk

./: .gitignore  README.md  app.py  cdk.json  pyproject.toml
site-contents/: README.md  error.html  index.html
site-contents/v1/: error.html  index.html
static_site/: static_site_stack.py
static_site_cdk/: static_site_stack.py
